--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -1,5 +1,3 @@
-<!-- accounting/templates/index.html -->
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -9,5 +7,12 @@
 </head>
 <body>
     <h1>Welcome to the Accounting App!</h1>
+    <nav>
+        <ul>
+            <li><a href="{% url 'department_expenses' %}">部門別支出</a></li>
+            <li><a href="{% url 'age_expenses' %}">年齢別支出</a></li>
+            <li><a href="{% url 'monthly_personal_expenses' %}">月別個人支出</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
