Add create expense view and template

--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to the Accounting App!</h1>
+    <li><a href="{% url 'create_expenses' %}">入力フォーム</a></li>
     <li><a href="{% url 'department_expenses' %}">部門別支出</a></li>
     <li><a href="{% url 'age_expenses' %}">年齢別支出</a></li>
     <li><a href="{% url 'monthly_personal_expenses' %}">月別個人支出</a></li>
