--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -13,18 +13,18 @@
                 <li><a href ="/">ホーム</a><li>
                 <li><a href="{% url 'create_expenses' %}">入力フォーム</a></li>
                 <li><a href="{% url 'department_expenses' %}">部門別支出</a></li>
-                <li><a href="{% url 'age_expenses' %}">年齢別支出</a></li>
+                <li><a href="{% url 'age_expenses' %}">代別支出</a></li>
                 <li><a href="{% url 'monthly_personal_expenses' %}">月別個人支出</a></li>
             </ul>
         </nav>
     </header>
     <section>
         <h2>ようこそ、会計管理システムへ</h2>
-        <p>このシステムでは、あなたの支出を簡単に管理し、レポートを生成することができます。支出を入力し、部門別や年齢別のデータを確認しましょう。</p>
+        <p>このページではDLCのみんなが払ったお金を、入力し管理できるようにしたよ!!</p>
     </section>
 
     <footer>
-        <p>© 2024 会計管理システム</p>
+        <p>© 2024 DLC会計管理システム</p>
     </footer>
 </body>
 </html>
