--- a/accounting/templates/accounting/base.html
+++ b/accounting/templates/accounting/base.html
@@ -10,6 +10,16 @@
     <div class="container">
         <header>
             <h1>会計管理システム</h1>
+            <nav>
+                <ul>
+                    <li><a href="/">ホーム</a></li>
+                    <li><a href="{% url 'create_expenses' %}">入力フォーム</a></li>
+                    <li><a href="{% url 'department_expenses' %}">部門別支出</a></li>
+                    <li><a href="{% url 'age_expenses' %}">年齢別支出</a></li>
+                    <li><a href="{% url 'monthly_personal_expenses' %}">月別個人支出</a></li>
+                </ul>
+            </nav>
+        
         </header>
 
         <section class="content">
