--- a/accounting/templates/accounting/create_expenses.html
+++ b/accounting/templates/accounting/create_expenses.html
@@ -8,7 +8,17 @@
     <button type="submit">保存</button>
 </form>
 
-<p>ここで入力した支出データは、後から部門別、年齢別、月別で分析することができます。</p>
+<p>
+    ここで入力した支出データは、後から部門別、年齢別、月別で分析することができます<br>
+    代:各代を入力して！<br>
+    ダンサーネーム:統一して<br>
+    金額:使った金額を入力してね<br>
+    係り:自分の係りを入力してね、もしない場合はその他<br>
+    借りた施設:渉外の子だけ入力して！<br>
+    使った内容:ex交際費とか、レンタカー代とかいろいろ  空欄でもOK<br>
+    日付:おんなじ形式で入力してね<br>
+    んで最後に保存<br>
+</p>
 
 <!-- JavaScript for date picker -->
 <script type="text/javascript">
