--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -12,9 +12,13 @@
             <ul>
                 <li><a href ="/">ホーム</a><li>
                 <li><a href="{% url 'create_expenses' %}">入力フォーム</a></li>
+                <li><a href="{% url 'input_category' %}">通常期入力フォーム</a></li>
                 <li><a href="{% url 'department_expenses' %}">部門別支出</a></li>
                 <li><a href="{% url 'age_expenses' %}">代別支出</a></li>
                 <li><a href="{% url 'monthly_personal_expenses' %}">月別個人支出</a></li>
+                <li><a href="{% url 'view_public_performance' %}">公演費まとめ</a></li>
+                <li><a href="{% url 'view_monthly_fee' %}">月会費まとめ</a></li>
+                <li><a href="{% url 'view_dance_party' %}">ダンパ費まとめ</a></li>
             </ul>
         </nav>
     </header>
