--- a/accounting/templates/accounting/monthly_personal_expenses.html
+++ b/accounting/templates/accounting/monthly_personal_expenses.html
@@ -1,4 +1,5 @@
 {% extends "accounting/base.html" %}
+
 {% block content %}
     <h2>月ごとの個人支出</h2>
     <p>ここでは、月ごとの支出を確認できます。月ごとの支出合計や詳細情報を一覧で表示します。</p>
@@ -13,9 +14,13 @@
                 </tr>
                 {% for expense in monthly_expenses %}
                     <tr>
-                        <td>{{ expense.month|date:"Y年m月" }}</td>
-                        {% load humanize %}
-                        <td>{{ expense.total}}円</td>
+                        <td>
+                            <!-- リンクを修正して月ごとの詳細ページに遷移 -->
+                            <a href="{% url 'month_details' year=expense.month.year month=expense.month.month %}">
+                                {{ expense.month | date:"Y年m月" }}
+                            </a>
+                        </td>
+                        <td>{{ expense.total }}円</td>
                     </tr>
                 {% endfor %}
             </table>
