--- a/accounting/templates/accounting/input_category.html
+++ b/accounting/templates/accounting/input_category.html
@@ -9,4 +9,11 @@
     <button type="submit">保存</button>
 </form>
 
+<script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function() {
+        const today = new Date().toISOString().split('T')[0];
+        document.getElementById('id_date').value = today;
+    });
+</script>
+
 {% endblock %}
