--- a/accounting/templates/accounting/base.html
+++ b/accounting/templates/accounting/base.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="/">ホーム</a></li>
-                    <li><a href="{% url 'create_expenses' %}">入力フォーム</a></li>
+                    <li><a href="{% url 'create_expenses' %}">係り活動入力フォーム</a></li>
                     <li><a href="{% url 'input_category' %}">通常期入力フォーム</a></li>
                     <li><a href="{% url 'department_expenses' %}">係り別支出</a></li>
                     <li><a href="{% url 'age_expenses' %}">代別支出</a></li>
