--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
+{% extends "accounting/base.html" %}
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,3 +40,4 @@
     </footer>
 </body>
 </html>
+{% endblock %}
