--- a/accounting/templates/accounting/base.html
+++ b/accounting/templates/accounting/base.html
@@ -18,7 +18,7 @@
         </div>
 
         <!-- ナビゲーション -->
-        <nav class="main-nav {% if request.path != '/' %}hidden{% endif %}" id="mainNav">
+        <nav class="main-nav" id="mainNav">
             <ul>
                 <li><a href="/">🏠 ホーム</a></li>
                 <li><a href="{% url 'create_expenses' %}">✏️ 係り活動入力フォーム</a></li>
