--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <div class="header-container">
+            <button id="menuToggle" class="menu-toggle">☰</button>
             <h1>会計管理システム</h1>
         </div>
         <nav class="main-nav">
