--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -15,7 +15,7 @@
             <button id="menuToggle" class="menu-toggle">☰</button>
             <h1>会計管理システム</h1>
         </div>
-        <nav class="main-nav">
+        <nav class="main-nav" id="mainNav">
             <ul>
                 <li class="active"><a href="/">🏠 ホーム</a></li>
                 <li><a href="{% url 'create_expenses' %}">✏️ 係り活動入力フォーム</a></li>
