--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -38,5 +38,11 @@
     <footer>
         <p>© 2024 DLC会計管理システム</p>
     </footer>
+    <script>
+        if (window.location.pathname === '/') {
+            document.getElementById('mainNav').classList.add('open');
+        }
+    </script>
+    
 </body>
 </html>
