--- a/accounting/static/accounting/css/style.css
+++ b/accounting/static/accounting/css/style.css
@@ -255,7 +255,7 @@ footer {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.age-title , .department-title, .page-title{
+.age-title , .department-title{
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
