--- a/accounting/static/accounting/css/style.css
+++ b/accounting/static/accounting/css/style.css
@@ -408,7 +408,7 @@ footer {
 /*削除ボタン*/
 
 .btn-delete {
-    background-color: #ff6b6b;
+    background-color: #b45b5b;
     color: #fff;
     border: none;
     padding: 5px 10px;
@@ -416,7 +416,7 @@ footer {
 }
 
 .btn-delete:hover {
-    background-color: #ff4b4b;
+    background-color: #c75858;
 }
 
 .btn-confirm {
